--- a/escom-bpm-web/src/main/webapp/resources/css/em_style1.css
+++ b/escom-bpm-web/src/main/webapp/resources/css/em_style1.css
@@ -165,7 +165,7 @@ body{
 
 .panelLogin{
     margin: auto;
-    margin-top: 60px;
+    margin-top: 60px !important;
     max-width: 700px;
     min-width: 600px;
 }
