--- a/escom-bpm-web/src/main/webapp/view/common/item-select-list-btn.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/item-select-list-btn.xhtml
@@ -7,17 +7,11 @@
     <ui:param name="_rendered" value="#{_rendered == null ? true : _rendered}" />
     <h:panelGroup id="#{_itemPanel}" styleClass="ui-grid-col-12 col-padding" rendered="#{_rendered}">
         <p:commandButton id="#{_itemPanel}_btn" 
-                         process="#{_itemPanel}_btn"
-                         onstart="PF('statusDialog').show()"
-                         oncomplete="PF('statusDialog').hide();"
                          actionListener="#{_selectorBean.onOneSelectItem()}" style="display: none;">
-            <p:ajax event="dialogReturn" listener="#{_bean[_actionSelect]}" 
-                    update="#{_update} #{_itemPanel}"/>
+            <p:ajax event="dialogReturn" listener="#{_bean[_actionSelect]}" update="#{_update} #{_itemPanel}"/>
         </p:commandButton>
 
         <p:commandButton id="#{_itemPanel}_btnOpenCard" actionListener="#{_selectorBean.prepEditItem(_itemValue)}"
-                         onstart="PF('statusDialog').show()"
-                         oncomplete="PF('statusDialog').hide();"
                          style="display: none;">
             <p:ajax event="dialogReturn" update="#{_itemPanel}"/>
         </p:commandButton>
