--- a/escom-bpm-web/src/main/webapp/view/docs/docTypes/doctype-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/docTypes/doctype-explorer.xhtml
@@ -19,7 +19,7 @@
     
     <ui:define name="centerFormFooter">
         <h:panelGroup rendered="#{!_bean.isTrashSelected()}">
-            <p:panel header="" styleClass="ui-grid-col-12" rendered="#{_bean.treeSelectedNode == null}">
+            <p:panel styleClass="ui-grid-col-12" rendered="#{_bean.treeSelectedNode == null}">
                 <p:outputLabel value="#{''.concat(bundle.GroupIsNotSelected).concat('. ').concat(bundle.ForCreateObjectNeedSelectGroup)}"/>
             </p:panel>
         </h:panelGroup>        
