--- a/escom-bpm-web/src/main/webapp/view/errors/505.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/errors/505.xhtml
@@ -1,48 +1,37 @@
-<?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui">
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:h="http://xmlns.jcp.org/jsf/html"
+                xmlns:p="http://primefaces.org/ui"
+                xmlns:f="http://xmlns.jcp.org/jsf/core"
+                xmlns:pe="http://primefaces.org/ui/extensions"
+                xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+                template="/view/templ/templ.xhtml">
 
-    <h:head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <meta name="viewport" content="width=device-width" />     
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta http-equiv="Cache-Control" content="no-store"/>
-        <meta http-equiv="Cache-Control" content="must-revalidate"/>
-        <meta http-equiv="Cache-Control" content="no-cache"/>
-        <meta http-equiv="Expires" content="Mon, 8 Aug 2006 10:00:00 GMT"/>
-        <meta http-equiv="Pragma" content="no-cache"/>
-        <meta http-equiv="Content-Style-Type" content="text/css"/>
-        <h:outputStylesheet library="css" name="em_style1.css"/> 
-        <title>#{msg.Error}</title>
-    </h:head>
+    <ui:define name="title">
+        #{msg.Error}
+    </ui:define> 
 
-    <h:body>
-        <h:form>
-            <p:panel styleClass="panelLogin">
-                <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12">
-                    <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-3, ui-grid-col-9" styleClass="ui-grid-col-12">
+    <ui:define name="body">
+        <h:form id="errorFRM" style="height: 100%;"> 
+            <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 ui-panelgrid-blank" style="margin-top: 60px; height: 100%;">
+            <p:panel styleClass="without-spaces" style="height: 100%;">
+                <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 ui-panelgrid-blank" style="height: 100%;">
+                    <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-3, ui-grid-col-9" styleClass="ui-panelgrid-blank" style="height: 100%;">
                         <p:graphicImage name="/images/escom_logo.jpg"  />
                         <h:panelGroup styleClass="ui-grid-col-12">
                             <h2> #{bundle.OurApologies}</h2>
-                            <br/>
                             <h3>#{bundle.INTERNAL_ERROR}</h3>                        
                         </h:panelGroup>
                     </p:panelGrid>
                     <p:separator />
                     <p:outputLabel value="#{msg.PossibleErroralreadyFixed}"/>
                     <p:spacer />
-                    <p:commandButton value="#{bundle.CloseSession}" title="#{bundle.ExitProgramm}"
-                                     onstart="return isClose = 1;"                                     
-                                     actionListener="#{sessionBean.onSessionExit()}"/>
-                    <p:panelGrid  columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12">                    
-                        <h:outputText value="#{requestScope['javax.servlet.error.message']}" style="color: red;" />  
-                    </p:panelGrid>                    
+                    <p:commandLink id="btnClose" value="#{bundle.CloseSession}" onstart="return isClose = 1;"
+                                   update="errorFRM" onclick="document.getElementById('errorFRM:btnClose').disables = true;"
+                                   ajax="false" action="#{sessionBean.onSessionExit()}" target="newPopup"/>
                 </p:panelGrid>
             </p:panel>
+            </p:panelGrid>
         </h:form> 
-    </h:body> 
-</html>
+    </ui:define>
+</ui:composition>
 
