--- a/escom-bpm-web/src/main/webapp/view/processes/elements/timer-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/elements/timer-card.xhtml
@@ -1,9 +1,9 @@
 <ui:composition  xmlns="http://www.w3.org/1999/xhtml"
                  xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                  xmlns:p="http://primefaces.org/ui"
-                 template="/view/templ/templ-dlg.xhtml"
                  xmlns:f="http://xmlns.jcp.org/jsf/core"
-                 xmlns:h="http://xmlns.jcp.org/jsf/html">
+                 xmlns:h="http://xmlns.jcp.org/jsf/html"
+                 template="/view/templ/templ-dlg.xhtml">
 
     <ui:param name="_bean" value="#{timerCardBean}"/>
     
@@ -20,71 +20,8 @@
                     <p:outputLabel value="#{bundle.DateNextStart}:"/>
                     <p:inputText value="#{timerCardBean.procTimer.startDate}" readonly="true">
                         <f:convertDateTime type="both" dateStyle="short" timeStyle="short" locale="#{sessionBean.locale}" timeZone="#{TimeZone.getDefault()}"/>
-                    </p:inputText>
-        
-                    <h:panelGrid id="pnRemainderRepeatType" columns="3" styleClass="without-spaces">
+                    </p:inputText>       
             
-                        <p:selectOneRadio id="reminderRepeatType" value="#{timerCardBean.procTimer.repeatType}" layout="grid" columns="1"  >
-                            <f:selectItem itemLabel="" itemValue="no" />
-                            <f:selectItem itemLabel="" itemValue="everyday" />
-                            <f:selectItem itemLabel="" itemValue="everyweek" />  
-                            <p:ajax update="reminderDayTime pnRemainderRepeatValues" event="valueChange" process="@this"/>
-                        </p:selectOneRadio>
-                        <h:panelGrid columns="2" styleClass="without-spaces">
-                            <p:outputLabel value="#{''.concat(bundle.EveryDay).concat(' ').concat(bundle.AtTime)}:"/>
-                            <p:calendar id="reminderDayTime" label="#{bundle.Time}" value="#{timerCardBean.reminderTime}"
-                                         disabled="#{timerCardBean.procTimer.repeatType ne 'everyday'}"
-                                         pattern="HH:mm" timeOnly="true" >
-                                <p:ajax event="dateSelect" />
-                            </p:calendar>
-                            <p:outputLabel value="#{bundle.EveryWeek}:"/>
-                        </h:panelGrid>
-        
-                        <h:panelGrid columns="2" styleClass="without-spaces">
-                            <p:spacer/> <p:spacer/>
-                            <h:panelGroup id="pnReminderDelta">
-                                 <p:outputLabel value="#{bundle.Before}: "/>
-                                 <p:spinner id="remDeltaDay" value="#{timerCardBean.reminderDeltaDay}" min="0" max="999" 
-                                            suffix="#{bundle.DayShort}" size="3"                                             
-                                            disabled="#{timerCardBean.procTimer.repeatType ne 'singl'}">
-                                 </p:spinner>
-                                 <p:spinner id="remDeltaHour" value="#{timerCardBean.reminderDeltaHour}" min="0" max="99" 
-                                            suffix="#{bundle.HourShort}" size="2"
-                                            disabled="#{timerCardBean.procTimer.repeatType ne 'singl'}">
-                                 </p:spinner>
-                                 <p:spinner id="remDeltaMinute" value="#{timerCardBean.reminderDeltaMinute}" min="0" max="99" 
-                                            suffix="#{bundle.Minute}" size="2"
-                                            disabled="#{timerCardBean.procTimer.repeatType ne 'singl'}">
-                                 </p:spinner>
-                            </h:panelGroup>
-                            <p:outputLabel value="#{bundle.BeforeDeadline}"/>
-                        </h:panelGrid>
-                    </h:panelGrid> 
-                            
-                    <p:panelGrid id="pnRemainderRepeatValues" columns="2" columnClasses="ui-grid-col-3 ui-grid-col-7" styleClass="without-spaces">
-                    
-                    <p:panelGrid columns="2" columnClasses="ui-grid-col-1 ui-grid-col-11" styleClass="without-spaces">
-                        <p:outputLabel value="#{bundle.Days}:"/>
-                        <p:selectManyCheckbox id="reminderWeekDays" value="#{timerCardBean.daysOfWeek}" layout="grid" columns="3"
-                                              disabled="#{timerCardBean.procTimer.repeatType ne 'everyweek'}">
-                            <f:selectItems value="#{timerCardBean.sourceDays}" var="day" itemLabel="#{timerCardBean.getDayWeekName(day)}" itemValue="#{day}" />
-                        </p:selectManyCheckbox>
-
-                        <p:outputLabel value="#{bundle.Time}:"/>
-                        <p:calendar id="reminderWeekTime" value="#{timerCardBean.reminderTime}" 
-                                    pattern="HH:mm" timeOnly="true" 
-                                    disabled="#{timerCardBean.procTimer.repeatType  ne 'everyweek'}">
-                        </p:calendar>
-                    </p:panelGrid>
-                </p:panelGrid>
-                    
-                    <p:separator/>
-                    
-                </p:panelGrid>
-            </p:tab>
-            
-            <p:tab title="#{bundle.Settings}" >
-                <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="without-spaces">
                     <h:panelGrid columns="2" styleClass="without-spaces">
                         <h:panelGroup>
                             <p:outputLabel value="#{''.concat(bundle.Run).concat(' ').concat(bundle.in)}:"/>
