--- a/escom-bpm-web/src/main/webapp/view/partners/groups/partnergroup-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/partners/groups/partnergroup-card.xhtml
@@ -16,16 +16,9 @@
 
     <ui:define name="page_body">
         <p:tab id="cardTab" title="#{bundle.Explorer}">
-            <p:panelGrid columns="1" styleClass="ui-grid-col-12 ui-panelgrid-blank col-padding" columnClasses="ui-grid-col-12">
-
-                <p:outputLabel value="#{bundle.Code}" />            
-                <p:inputText value="#{_bean.editedItem.code}" id="code"
-                             disabled="#{_bean.isReadOnly()}"
-                             maxlength="50"
-                             requiredMessage="#{bundle.Field} [#{bundle.Code}] #{bundle.MustBeFilled}"                                 
-                             onchange="return itemChange = 1;"/>
+            <p:panelGrid columns="1" styleClass="ui-grid-col-12 ui-panelgrid-blank col-padding" columnClasses="ui-grid-col-12">                
                     
-                <p:outputLabel value="#{bundle.Name}" />
+                <p:outputLabel value="#{bundle.Name}:" indicateRequired="true" />
                 <p:inputText value="#{_bean.editedItem.name}" id="nameItem" styleClass="ui-grid-col-12"
                              title="#{bundle.GroupName}"
                              disabled="#{_bean.isReadOnly()}"
@@ -34,6 +27,13 @@
                              required="#{param['isRequired'] == 'true'}"
                              requiredMessage="#{bundle.Field} [#{bundle.Name}] #{bundle.MustBeFilled}">
                 </p:inputText>
+                
+                <p:outputLabel value="#{bundle.Code}" />            
+                <p:inputText value="#{_bean.editedItem.code}" id="code"
+                             disabled="#{_bean.isReadOnly()}"
+                             maxlength="50"
+                             requiredMessage="#{bundle.Field} [#{bundle.Code}] #{bundle.MustBeFilled}"                                 
+                             onchange="return itemChange = 1;"/>
             </p:panelGrid>
         </p:tab>
         <p:tab title="#{bundle.Partners}"> 
