--- a/escom-bpm-web/src/main/webapp/view/templ/table.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/table.xhtml
@@ -15,6 +15,10 @@
                  selection="#{_bean.checkedItems}"
                  rowKey="#{item.itemKey}">
 
+        <f:facet name="header">
+            #{_bean.jurnalHeader}
+        </f:facet>
+        
         <p:ajax event="rowSelect" update="mainFRM:explToolBar" oncomplete="initDND();" />
         <p:ajax event="rowDblselect" 
                 listener="#{_bean.onRowDblClckOpen}"
