--- a/escom-bpm-web/src/main/webapp/view/companies/departaments/department-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/companies/departaments/department-card.xhtml
@@ -26,7 +26,7 @@
             <p:outputLabel value="#{bundle.Departament}" />
             <p:inputText id="nameItem" value="#{departmentCardBean.editedItem.name}" title="#{bundle.Name}"
                         styleClass="ui-grid-col-12"
-                        onkeypress="checkEsc(#{departmentCardBean.cancelBtnName});"
+                        onkeypress="checkEsc();"
                         onchange="return itemChange = 1;"
                         disabled="#{departmentCardBean.isReadOnly()}"
                         required="#{param['isRequired'] == 'true'}"
@@ -36,7 +36,7 @@
             <p:outputLabel value="#{bundle.Code}" />
             <h:panelGroup styleClass="ui-grid-col-12" id="codeGroup">
                 <p:inputText id="companyCode" value="#{departmentCardBean.editedItem.code}"
-                             onkeypress="checkEsc(#{departmentCardBean.cancelBtnName});"
+                             onkeypress="checkEsc();"
                              disabled="#{departmentCardBean.isReadOnly()}"
                              styleClass="ui-grid-col-12"
                              size="10"
