--- a/escom-bpm-web/src/main/webapp/view/processes/process-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/process-explorer.xhtml
@@ -7,11 +7,11 @@
 
     <!-- стандарный обозреватель/селектор -->
     
-    <ui:param name="_bean" value="#{explorerTreeBean}" />
-    <ui:param name="_treeBean" value="#{processTypesBean}" />
+    <ui:param name="_bean"        value="#{explorerTreeBean}" />
+    <ui:param name="_treeBean"    value="#{processTypesBean}" />
     <ui:param name="_detailBean"  value="#{processBean}"/>
     <ui:param name="_searcheBean" value="#{_detailBean}"/>
-    
+    <ui:param name="_lbGroupName"    value="#{bundle.ProcessesTypes}"/>
     <ui:param name="_selectorHeader" value="#{_bean.getLabelFromBundle('ProcessSelector')}"/>
     <ui:param name="_explorerHeader" value="#{_bean.getLabelFromBundle('Processes')}"/>
     
@@ -43,5 +43,13 @@
             </h:outputText>
         </p:column>
     </ui:define>
-
+        
+    <ui:define name="centerFormFooter">
+        <h:panelGroup rendered="#{!_bean.isTrashSelected()}">
+            <p:panel styleClass="ui-grid-col-12" rendered="#{_bean.treeSelectedNode == null}">
+                <p:outputLabel value="#{''.concat(bundle.ProcessTypeNotSelected).concat('. ').concat(bundle.ForCreateObjectNeedSelectGroup)}"/>
+            </p:panel>
+        </h:panelGroup>        
+    </ui:define>
+    
 </ui:composition>
